Adding counters in search recipes response. Fixing and updating swagger.
